--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-178.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-408.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-268.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-482.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-297.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇭🇰 香港-220.1KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇯🇵 日本-719.8KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-243.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-444.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-408.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-268.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
