--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-482.5KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-297.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇭🇰 香港-220.1KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇯🇵 日本-719.8KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-243.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-255.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-253.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-482.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-719.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-830.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
