--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇭🇰 香港-220.1KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-255.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-253.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-612.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.41MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.34MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-335.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇺🇸 美国-234.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-582.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-549.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-352.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-255.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1000.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-612.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-335.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-351.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
