--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-374.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-582.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-549.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-352.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇨🇦 加拿大-336.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.85MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-240.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-423.6KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇸🇬 新加坡-623.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活9天)香港-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-582.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-483.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-240.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇫🇷 法国-423.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-623.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
